--- a/src/MarkdownConverter/Implementation/Resources/pdf-template.html
+++ b/src/MarkdownConverter/Implementation/Resources/pdf-template.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <title>{0}</title>
+  <title>{title}</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <style type="text/css">
     {style}
